# git-repo-gitcode

./: .gitignore  README.md  error.py  manifest_xml.py  project.py  pyproject.toml  repo  settings.py
docs/: gitcode.md
subcmds/: config.py  gitcode_pr.py  push.py
