# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-repo-gitcode"
version = "2.64.0"
description = "Repo helps manage many Git repositories (GitCode fork)"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Apache-2.0" }
maintainers = [{ name = "GitCode" }]
# The GitCode-specific commands (`repo push`, `repo gitcode_pr`) call the
# GitCode REST API with requests, so it must be present in the environment the
# launcher execs main.py in.
dependencies = ["requests"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/sanchuanhehe/git-repo-gitcode"

# Install the standalone `repo` launcher as a console command. uv exposes it on
# PATH after `uv tool install .`; setuptools rewrites the shebang to the
# install environment's python (which carries the requests dependency).
[tool.setuptools]
script-files = ["repo"]
packages = []
py-modules = []

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311'] #, 'py312'

# Config file for the isort python module.
# This is used to enforce import sorting standards.
#
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
# Be compatible with `black` since it also matches what we want.
profile = 'black'

line_length = 80
length_sort = false
force_single_line = true
lines_after_imports = 2
from_first = false
case_sensitive = false
force_sort_within_sections = true
order_by_type = false

# Ignore generated files.
extend_skip_glob = '*_pb2.py'

# Allow importing multiple classes on a single line from these modules.
# https://google.github.io/styleguide/pyguide#s2.2-imports
single_line_exclusions = ['abc', 'collections.abc', 'typing']

[tool.pytest.ini_options]
markers = """
    skip_cq: Skip tests in the CQ. Should be rarely used!
"""
